# CorrelativeImaging

./: README.md  TODO.md  batch.py  example_pipeline.json  main.py  pyproject.toml
.claude/: settings.local.json
correlative_imaging/: batch.py  cli.py  diagnostics.py
correlative_imaging.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
correlative_imaging/io/: __init__.py  plate.py  reader.py
correlative_imaging/pipeline/: __init__.py  analyze.py  base.py  colocalize.py  ilastik.py  preprocess.py  segment.py
correlative_imaging/results/: __init__.py  analysis.py  classify.py  cluster.py  discovery.py  explorer.py  features.py  labels.py  lda.py
correlative_imaging/storage/: __init__.py  database.py
correlative_imaging/viewer/: __init__.py  gui.py  napari_viewer.py
fiji/: intensity_projections_v2.py  pipeline_combined_v8.py  rename_files.py  rename_files_v2.py
scripts/: stage_plate_data.ps1
