[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "correlative-imaging"
version = "0.1.0"
description = "Modern Python pipeline for correlative microscopy image analysis"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Core image processing
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "pandas>=2.1",
    # Multi-format microscopy I/O
    "bioio>=1.1",
    "bioio-tifffile",       # TIFF, BigTIFF
    "bioio-ome-tiff",       # OME-TIFF
    "bioio-czi",            # Zeiss CZI
    "bioio-lif",            # Leica LIF
    "bioio-nd2",            # Nikon ND2
    "bioio-imageio",        # PNG, JPG, BMP, etc.
    "bioio-ome-zarr",       # OME-Zarr (cloud-native)
    "tifffile>=2023.9",     # direct TIFF access + writing
    "roifile>=2023.5",      # ImageJ .roi file compat
    # Data & storage
    "pyarrow>=14.0",        # parquet export
    # Config
    "pyyaml>=6.0",
    # CLI
    "click>=8.1",
    "rich>=13.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
viewer = [
    "napari[all]>=0.4.19",
]
gpu = [
    # drop-in GPU replacements — install only if CUDA available
    "cupy-cuda12x",
    "cucim-cu12",
]
dask = [
    # Optional: process-based multi-core batch engine (RunTab "Use Dask").
    # Without this the thread/sequential batch paths still work unchanged.
    "dask[distributed]>=2024.1",
    # bokeh powers the live LocalCluster dashboard (task stream, per-worker
    # CPU/memory). dask[distributed] does NOT pull it in; without it the
    # dashboard URL just shows an "install bokeh" page, but batch runs fine.
    "bokeh>=3.1",
]
bioformats = [
    # covers VSI, SCN, ICS, AFM, etc.
    "bioio-bioformats",
    # Bundled JDK 17 so Bio-Formats doesn't depend on (or fight with) whatever
    # Java happens to be on the host. Pinned to the 17.x line: bffile requires
    # >=11, but jpype's native bridge has had crashes on very new JDKs (21+).
    "jdk4py>=17.0.0,<18",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]
analysis = [
    # notebooks/ — exploring results.db output
    "jupyter>=1.0",
    "matplotlib>=3.8",
]

[project.scripts]
ci = "correlative_imaging.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
